force-app/main/default/objects/vlocity_ps__AdminTabLayout__c/fields/vlocity_ps__IconId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IconId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Icon to be used by the tab</description>
    <label>Icon</label>
    <referenceTo>vlocity_ps__VlocityAttachment__c</referenceTo>
    <relationshipLabel>Admin Tab Layouts</relationshipLabel>
    <relationshipName>AdminTabLayouts</relationshipName>
    <type>Lookup</type>
</CustomField>