force-app/main/default/objects/vlocity_ps__AdminTabLayout__c/fields/vlocity_ps__IframeSrc__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IframeSrc__c</fullName>
    <label>IframeSrc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>