force-app/main/default/objects/vlocity_ps__AdminTabLayout__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>vlocity_ps__Sequence__c</columns>
    <columns>NAME</columns>
    <columns>vlocity_ps__IframeSrc__c</columns>
    <columns>vlocity_ps__ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>